adds a new page

--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -1,4 +1,6 @@
 {
 	"announcements": "E'lonlar",
-	"services": "Xizmatlar"
+	"services": "Xizmatlar",
+	"home": "Bosh sahifa",
+	"announcement": "E'lonlar"
 }
