add profile page

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,3 +1,74 @@
 {
-	"announcements": "Dobro posjolovat"
+	"nav_logo": "DachaOL",
+	"nav_home": "Главная",
+	"nav_cottage": "Объявления",
+	"nav_fovarite": "Избранное",
+	"nav_contact": "Контакт",
+	"nav_profile": "Профиль",
+	"nav_myaccaunt": "Мой аккаунт",
+	"profile_search": "Поиск",
+	"profile_e'lonlar": "Добавить объявление",
+	"profile_dachalarim": "Мои дачи",
+	"profile_service": "Услуги",
+	"profile_tariff": "Использованные тарифы",
+	"fovarite_cottge": "Избранные объявления",
+	"none_fovatite_cottage": "Пока нет избранных объявлений",
+	"contact_to_me": "Свяжитесь с нами",
+	"dachaOl_info": "Свяжитесь с DachaOL",
+	"send_message": "Отправить",
+	"contact_description": "Я здесь, чтобы помочь вам и ответить на любые вопросы. Жду вашего сообщения",
+	"connection": "Связь",
+	"form_message": "Напишите, если у вас есть вопросы...",
+	"form_number": "Номер телефона",
+	"form_name": "Введите ваше имя",
+	"profile_e'lonlarim": "Мои объявления",
+	"used_services": "Использованные услуги",
+	"save": "Сохранить",
+	"elon_qoshish": "Добавить объявление",
+	"advert": "Объявление",
+	"similar_adverts": "Похожие объявления",
+	"share": "Поделиться",
+	"progress": "В процессе",
+	"filter": "Фильтр",
+	"search_filter": "Поиск по названию...",
+	"logout": "Выйти",
+	"my_annonim": "Вы пока не добавили объявлений!",
+	"place": "Местоположение",
+	"dacha_type": "Тип объявлений",
+	"dacha_type_all": "Все типы объявлений",
+	"comforts": "Удобства",
+	"result": " - результат",
+	"search_adverts": "🔍 Введите данные, которые ищете",
+	"search_placeholder": "Что ищете? Введите...",
+	"search_no_result": "К сожалению, данные не найдены 😔",
+	"not_service": "Использование доступных тарифов",
+	"money_charge": "сум",
+	"add": "добавить",
+	"faq_title": "Часто задаваемые вопросы",
+	"faq_visibility_question": "Сколько раз объявление будет видно на баннере?",
+	"faq_visibility_answer": "Ваша дача будет видна каждому пользователю при входе на сайт",
+	"faq_refund_question": "Можно ли вернуть платеж?",
+	"faq_refund_answer": "Нет, платеж не возвращается, но вы можете использовать услугу до конца выбранного периода",
+	"faq_multiple_question": "Будет ли показано вместе с другими дачами?",
+	"faq_multiple_answer": "Да, но каждая дача отображается по отдельному тарифу",
+	"target_title": "Для кого эта услуга?",
+	"target_quick_rental": "Для тех, кто хочет быстро сдать в аренду",
+	"target_seasonal_demand": "В период повышенного сезонного спроса",
+	"target_new_owners": "Для новых владельцев дач",
+	"promo_title": "Выгодное предложение!",
+	"promo_description": "При покупке тарифа на 1 месяц + 5 дней бесплатно!",
+	"cta_button": "Выберите тариф прямо сейчас!",
+	"select_button": "Выбрать",
+	"contact_title": "Связь",
+	"contact_email": "Email: info@dacha.uz",
+	"contact_phone": "Телефон: +998 97 108 20 04",
+	"currency": "сум",
+	"success": "Успех",
+	"add_cottage": "Ваше объявление появится на сайте после проверки модератора",
+	"crop_image": "Выберите нужную часть изображения!",
+	"crop_image_btn": "Обрезать изображение",
+	"map_plase": "Добавить карту",
+	"my_location": "Мое местоположение",
+	"rejected": "Отклоненный",
+	"tariffs": "Тарифы"
 }
