--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -1,6 +1,74 @@
 {
-	"announcements": "E'lonlar",
-	"services": "Xizmatlar",
-	"home": "Bosh sahifa",
-	"announcement": "E'lonlar"
+	"nav_logo": "DachaOL",
+	"nav_home": "Asosiy",
+	"nav_cottage": "E'lonlar",
+	"nav_fovarite": "Sevimli",
+	"nav_contact": "Kontakt",
+	"nav_profile": "Profil",
+	"nav_myaccaunt": "Mening akkauntim",
+	"profile_search": "Qidirish",
+	"profile_e'lonlar": "E`lon  qo`shish",
+	"profile_dachalarim": "Mening dachalarim",
+	"profile_service": "Hizmatlar",
+	"profile_tariff": "Foydalangan tariflarim",
+	"fovarite_cottge": "Sevimli e'lonlar",
+	"none_fovatite_cottage": "Hozircha sevimli e'lonlar mavjud emas",
+	"contact_to_me": "Biz bilan bog`lanish",
+	"dachaOl_info": "DachaOL bilan bog`laning",
+	"send_message": "Yuborish",
+	"contacy_description": "Men sizga yordam berish va har qanday savolga javob berish uchun shu yerdaman. Sizdan xabar kutib qolaman",
+	"connection": "Bog'lanish",
+	"form_message": "Savollarngiz bo`lsa yozing...",
+	"form_number": "Telefon raqam",
+	"form_name": "Ismingizni kiriting",
+	"profile_e'lonlarim": "Men joylagan e'lonlar",
+	"foydalangan_service": "Xizmatlar",
+	"save": "Saqlash",
+	"elon_qoshish": "E'lon qo'shish",
+	"elon": "E'lon",
+	"oxshash_elonlar": "Oxshash e'lonlar",
+	"share": "Ulashish",
+	"progress": "Jarayonda",
+	"filtr": "Filtr",
+	"serach_filtr": "Nomi boyicha qirirish...",
+	"logout": "Chiqish",
+	"my_annonim": "Hozircha e'lon qo'shmagansiz!",
+	"place": "Joylashuv",
+	"dacha_type": "E'lonlar turi",
+	"dacha_type_all": "Barcha e'lonlar turi",
+	"camforts": "Qulayliklar",
+	"result": " - naticha",
+	"search_advertes": "🔍 Izlayotgan ma'lumotingizni kiriting ",
+	"search_plesholder": "Nimani qidiryapsiz? Kiriting...",
+	"search_no_result": "Afsuski, ma'lumot topilmadi 😔",
+	"not_servise": "Mavjud xizmatlar ",
+	"moey_charge": "so'm",
+	"add": "qo'shish",
+	"faq_title": "Tez-tez Beriladigan Savollar",
+	"faq_visibility_question": "Bannerda necha marta ko'rinadi?",
+	"faq_visibility_answer": "Dachangiz har bir foydalanuvchi saytga kirganida ko'rinadi",
+	"faq_refund_question": "To'lovni qaytarib olsam bo'ladimi?",
+	"faq_refund_answer": "Yo'q, to'lov qaytarilmaydi, lekin tanlangan muddat tugaguncha foydalanishingiz mumkin",
+	"faq_multiple_question": "Boshqa dachalar bilan bir vaqtda chiqadimi?",
+	"faq_multiple_answer": "Ha, lekin har bir dacha alohida tarif asosida ko'rsatiladi",
+	"target_title": "Bu Xizmat Kimlar Uchun?",
+	"target_quick_rental": "Tez ijara qilmoqchi bo'lganlar",
+	"target_seasonal_demand": "Mavsumiy talab yuqori bo'lgan paytda",
+	"target_new_owners": "Yangi dacha egasi",
+	"promo_title": "Ajoyib Taklif!",
+	"promo_description": "1 Oylik tarifni sotib olganlarga 5 kun bepul!",
+	"cta_button": "Hoziroq Tarifni Tanlang!",
+	"select_button": "Tanlash",
+	"contact_title": "Bog'lanish",
+	"contact_email": "Email: info@dacha.uz",
+	"contact_phone": "Telefon: +998 97 108 20 04",
+	"currency": "so'm",
+	"success": "Muvaffaqiyat",
+	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi",
+	"crop_image": "Rasmni kerakli qismini olish!",
+	"crop_image_btn": "Rasmni kesish",
+	"map_plase": "Xarita qo`shish",
+	"my_location": "Mening joylashuvim",
+	"rejected": "Rad etilgan",
+	"tariffs": "Tariflar"
 }
