--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -1,15 +1,11 @@
 {
 	"nav_logo": "DachaOL",
-	"nav_home": "Asosiy",
-	"nav_cottage": "E'lonlar",
-	"nav_fovarite": "Sevimli",
-	"nav_contact": "Kontakt",
-	"nav_profile": "Profil",
+
 	"nav_myaccaunt": "Mening akkauntim",
 	"profile_search": "Qidirish",
 	"profile_e'lonlar": "E`lon  qo`shish",
 	"profile_dachalarim": "Mening dachalarim",
-	"profile_service": "Hizmatlar",
+	"profile_service": "Xizmatlar",
 	"profile_tariff": "Foydalangan tariflarim",
 	"fovarite_cottge": "Sevimli e'lonlar",
 	"none_fovatite_cottage": "Hozircha sevimli e'lonlar mavjud emas",
@@ -22,28 +18,19 @@
 	"form_number": "Telefon raqam",
 	"form_name": "Ismingizni kiriting",
 	"profile_e'lonlarim": "Men joylagan e'lonlar",
-	"foydalangan_service": "Xizmatlar",
-	"save": "Saqlash",
-	"elon_qoshish": "E'lon qo'shish",
-	"elon": "E'lon",
-	"oxshash_elonlar": "Oxshash e'lonlar",
-	"share": "Ulashish",
+	"oxshash_elonlar": "O'xshash e'lonlar",
 	"progress": "Jarayonda",
 	"filtr": "Filtr",
 	"serach_filtr": "Nomi boyicha qirirish...",
 	"logout": "Chiqish",
 	"my_annonim": "Hozircha e'lon qo'shmagansiz!",
 	"place": "Joylashuv",
-	"dacha_type": "E'lonlar turi",
 	"dacha_type_all": "Barcha e'lonlar turi",
 	"camforts": "Qulayliklar",
-	"result": " - naticha",
 	"search_advertes": "🔍 Izlayotgan ma'lumotingizni kiriting ",
 	"search_plesholder": "Nimani qidiryapsiz? Kiriting...",
 	"search_no_result": "Afsuski, ma'lumot topilmadi 😔",
 	"not_servise": "Mavjud xizmatlar ",
-	"moey_charge": "so'm",
-	"add": "qo'shish",
 	"faq_title": "Tez-tez Beriladigan Savollar",
 	"faq_visibility_question": "Bannerda necha marta ko'rinadi?",
 	"faq_visibility_answer": "Dachangiz har bir foydalanuvchi saytga kirganida ko'rinadi",
@@ -60,8 +47,6 @@
 	"cta_button": "Hoziroq Tarifni Tanlang!",
 	"select_button": "Tanlash",
 	"contact_title": "Bog'lanish",
-	"contact_email": "Email: info@dacha.uz",
-	"contact_phone": "Telefon: +998 97 108 20 04",
 	"currency": "so'm",
 	"success": "Muvaffaqiyat",
 	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi",
@@ -70,5 +55,14 @@
 	"map_plase": "Xarita qo`shish",
 	"my_location": "Mening joylashuvim",
 	"rejected": "Rad etilgan",
-	"tariffs": "Tariflar"
+	"tariffs": "Tariflar",
+
+	"announcements": "E'lonlar",
+	"announcement": "E'lon",
+	"services": "Xizmatlar",
+	"contact": "Bog'lanish",
+	"add_announcements": "E'lon joylash",
+	"home": "Bosh sahifa",
+	"fovarite": "Sevimlilar",
+	"profile": "Profil"
 }
