--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -1,36 +1,14 @@
 {
 	"nav_logo": "DachaOL",
 
-	"nav_myaccaunt": "Mening akkauntim",
-	"profile_search": "Qidirish",
-	"profile_e'lonlar": "E`lon  qo`shish",
-	"profile_dachalarim": "Mening dachalarim",
-	"profile_service": "Xizmatlar",
-	"profile_tariff": "Foydalangan tariflarim",
-	"fovarite_cottge": "Sevimli e'lonlar",
-	"none_fovatite_cottage": "Hozircha sevimli e'lonlar mavjud emas",
 	"contact_to_me": "Biz bilan bog`lanish",
 	"dachaOl_info": "DachaOL bilan bog`laning",
 	"send_message": "Yuborish",
 	"contacy_description": "Men sizga yordam berish va har qanday savolga javob berish uchun shu yerdaman. Sizdan xabar kutib qolaman",
-	"connection": "Bog'lanish",
 	"form_message": "Savollarngiz bo`lsa yozing...",
 	"form_number": "Telefon raqam",
 	"form_name": "Ismingizni kiriting",
-	"profile_e'lonlarim": "Men joylagan e'lonlar",
-	"oxshash_elonlar": "O'xshash e'lonlar",
-	"progress": "Jarayonda",
-	"filtr": "Filtr",
-	"serach_filtr": "Nomi boyicha qirirish...",
-	"logout": "Chiqish",
-	"my_annonim": "Hozircha e'lon qo'shmagansiz!",
-	"place": "Joylashuv",
-	"dacha_type_all": "Barcha e'lonlar turi",
-	"camforts": "Qulayliklar",
-	"search_advertes": "🔍 Izlayotgan ma'lumotingizni kiriting ",
-	"search_plesholder": "Nimani qidiryapsiz? Kiriting...",
-	"search_no_result": "Afsuski, ma'lumot topilmadi 😔",
-	"not_servise": "Mavjud xizmatlar ",
+
 	"faq_title": "Tez-tez Beriladigan Savollar",
 	"faq_visibility_question": "Bannerda necha marta ko'rinadi?",
 	"faq_visibility_answer": "Dachangiz har bir foydalanuvchi saytga kirganida ko'rinadi",
@@ -45,17 +23,6 @@
 	"promo_title": "Ajoyib Taklif!",
 	"promo_description": "1 Oylik tarifni sotib olganlarga 5 kun bepul!",
 	"cta_button": "Hoziroq Tarifni Tanlang!",
-	"select_button": "Tanlash",
-	"contact_title": "Bog'lanish",
-	"currency": "so'm",
-	"success": "Muvaffaqiyat",
-	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi",
-	"crop_image": "Rasmni kerakli qismini olish!",
-	"crop_image_btn": "Rasmni kesish",
-	"map_plase": "Xarita qo`shish",
-	"my_location": "Mening joylashuvim",
-	"rejected": "Rad etilgan",
-	"tariffs": "Tariflar",
 
 	"announcements": "E'lonlar",
 	"announcement": "E'lon",
@@ -64,5 +31,21 @@
 	"add_announcements": "E'lon joylash",
 	"home": "Bosh sahifa",
 	"fovarite": "Sevimlilar",
-	"profile": "Profil"
+	"profile": "Profil",
+	"oxshash_elonlar": "O'xshash e'lonlar",
+	"currency": "so'm",
+	"success": "Muvaffaqiyat",
+	"select_button": "Tanlash",
+	"map_plase": "Xarita qo`shish",
+	"my_location": "Mening joylashuvim",
+	"rejected": "Rad etilgan",
+	"tariffs": "Tariflar",
+	"progress": "Jarayonda",
+	"filtr": "Filtr",
+	"serach_filtr": "Nomi boyicha qirirish...",
+	"logout": "Chiqish",
+	"my_annonim": "Hozircha e'lon qo'shmagansiz!",
+	"place": "Joylashuv",
+	"camforts": "Qulayliklar",
+	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi"
 }
