--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -47,5 +47,16 @@
 	"my_annonim": "Hozircha e'lon qo'shmagansiz!",
 	"place": "Joylashuv",
 	"camforts": "Qulayliklar",
-	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi"
+	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi",
+
+	"possible": "Mumkin",
+	"inPossible": "Mumkin emas",
+	"clock": "soat",
+	"from": "gacha",
+	"to": "dan",
+	"enter":"Kirish",
+	"pats":"Uy hayvonlari",
+	"alcahol":"Spirtli ichimliklar",
+	"party":"Korporativ tadbir",
+	"vois":"Sokin soatlar"
 }
