--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -61,5 +61,6 @@
 	"vois": "Sokin soatlar",
 	"my_announcements": "Mening e'lonlarim",
 	"my_tariff": "Foydalangan tariflarim",
-	"settings": "Sozlamalar"
+	"settings": "Sozlamalar",
+	"save": "Saqlash"
 }
