--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -62,5 +62,7 @@
 	"my_announcements": "Mening e'lonlarim",
 	"my_tariff": "Foydalangan tariflarim",
 	"settings": "Sozlamalar",
-	"save": "Saqlash"
+	"save": "Saqlash",
+	"none_fovatite_cottage": "Hozida sizda sevimle e'lonlar mavjud emas!",
+	"add": "Qo'shish"
 }
