--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -64,5 +64,6 @@
 	"settings": "Sozlamalar",
 	"save": "Saqlash",
 	"none_fovatite_cottage": "Hozida sizda sevimle e'lonlar mavjud emas!",
-	"add": "Qo'shish"
+	"add": "Qo'shish",
+	"all_announcements":"Barcha e'lonlar"
 }
