--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -65,5 +65,6 @@
 	"save": "Saqlash",
 	"none_fovatite_cottage": "Hozida sizda sevimle e'lonlar mavjud emas!",
 	"add": "Qo'shish",
-	"all_announcements":"Barcha e'lonlar"
+	"all_announcements": "Barcha e'lonlar",
+	"more": "Batafsil"
 }
