--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -48,5 +48,49 @@
 	"my_annonim": "Вы ещё не добавили объявлений!",
 	"place": "Местоположение",
 	"camforts": "Удобства",
-	"add_cottage": "Ваше объявление появится на сайте после прохождения модерации"
+	"add_cottage": "Ваше объявление появится на сайте после прохождения модерации",
+	"possible": "Возможно",
+	"inPossible": "Невозможно",
+	"clock": "часы",
+	"from": "с",
+	"to": "до",
+	"enter": "Вход",
+	"pats": "Домашние животные",
+	"alcahol": "Алкогольные напитки",
+	"party": "Корпоративное мероприятие",
+	"vois": "Тихие часы",
+	"my_announcements": "Мои объявления",
+	"my_tariff": "Мои тарифы",
+	"settings": "Настройки",
+	"save": "Сохранить",
+	"none_fovatite_cottage": "У вас пока нет избранных объявлений!",
+	"add": "Добавить",
+	"all_announcements": "Все объявления",
+	"more": "Подробнее",
+	"all": "Все",
+	"image_upload": "Загрузка изображения",
+	"main_info": "Основная информация",
+	"cottage_nema": "Название дачи",
+	"count_of_guests": "Количество гостей",
+	"count_rooms": "Количество комнат",
+	"single_bad": "Односпальные кровати",
+	"double_bad": "Двуспальные кровати",
+	"contact_phone": "Контактный телефон",
+	"desk_cottage": "Краткое описание дачи",
+	"location": "Местоположение",
+	"select_region": "Выберите область",
+	"select_place": "Выберите место",
+	"choos_map": "Выбрать на карте",
+	"price": "Цены",
+	"once_price": "Цена за день",
+	"weekent_price": "Цена на выходные",
+	"date": "Дата",
+	"rule": "Правила",
+	"comforts": "Удобства",
+	"noSmoking": "Разрешено курить",
+	"noAlcohol": "Разрешён алкоголь",
+	"noPets": "Разрешены животные",
+	"familyOnly": "Только для семейных",
+	"noLoudMusic": "Разрешена громкая музыка",
+	"noParty": "Разрешены вечеринки"
 }
