--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -66,5 +66,31 @@
 	"none_fovatite_cottage": "Hozida sizda sevimle e'lonlar mavjud emas!",
 	"add": "Qo'shish",
 	"all_announcements": "Barcha e'lonlar",
-	"more": "Batafsil"
+	"more": "Batafsil",
+	"all": "Barcha",
+	"image_upload": "Rasm yuklash",
+	"main_info": "Asosiy ma`lumotlar",
+	"cottage_nema": "Dacha nomi",
+	"count_of_guests": "Mexmonlar soni",
+	"count_rooms": "Xonalar soni",
+	"single_bad": "1 o'qinli yotoqlar soni",
+	"double_bad": "2 o'qinli yotoqlar soni",
+	"contact_phone": "Telefon raqam",
+	"desk_cottage": "Dacha haqida qisqacha tavsif",
+	"location": "Manzil",
+	"select_region": "Viloyatni tanlang",
+	"select_place": "Joylashuvni tanlang",
+	"choos_map": "Xaritadan belgilash",
+	"price": "Narxlar",
+	"once_price": "Bir kunlik narx",
+	"weekent_price": "Dam olish kunlari",
+	"date": "Vaqt",
+	"rule": "Qoidalar",
+	"comforts": "Qulayliklar",
+	"noSmoking": "Chekishga ruxsat",
+	"noAlcohol": "Alkogol ichimlikariga ruxsat",
+	"noPets": "Uy hayvonlariga ruxsat",
+	"familyOnly": "Faqat Oilaliylar uchun",
+	"noLoudMusic": "Baland musiqaga ruhsat",
+	"noParty": "Bazm qilishga ruhsat"
 }
