--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -92,5 +92,15 @@
 	"noPets": "Uy hayvonlariga ruxsat",
 	"familyOnly": "Faqat Oilaliylar uchun",
 	"noLoudMusic": "Baland musiqaga ruhsat",
-	"noParty": "Bazm qilishga ruhsat"
+	"noParty": "Bazm qilishga ruhsat",
+
+	"image_size": "PNG, JPG yoki GIF (max: 5MB)",
+	"size_worning": "Rasmlar soni 3ta dan kam bo`lmasligi kerak(max: 15 ta).",
+	"size_requerd": "Rasm qo`shing (kamida 3 ta rasm bo`lishi kerak)",
+	"size_info": "Yana {15 - previews.length} ta rasm qo`shishingiz mumkin",
+	"size_finshed": "Yetarlicha rasm qo`shildi",
+	"hours": "Soat",
+	"minutes": "Minut",
+	"yes": "Ha",
+	"no": "Yoq"
 }
