add a new woerds

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -101,5 +101,7 @@
 	"hours": "Часы",
 	"minutes": "Минуты",
 	"yes": "Да",
-	"no": "Нет"
+	"no": "Нет",
+	"work_day_price": "Цена рабочего дня",
+	"resently_cottage": "Недавно размещенные объявления"
 }
