--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -102,5 +102,8 @@
 	"hours": "Soat",
 	"minutes": "Minut",
 	"yes": "Ha",
-	"no": "Yoq"
+	"no": "Yoq",
+
+	"work_day_price": "Ish kunlaridagi narx",
+	"resently_cottage": "Yaqinda joylangan e`lonlar "
 }
