--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -96,7 +96,8 @@
 	"image_size": "PNG, JPG или GIF (макс: 5MB)",
 	"size_worning": "Количество изображений должно быть не менее 3 (макс: 15).",
 	"size_requerd": "Добавьте изображение (должно быть как минимум 3 изображения)",
-	"size_info": "Вы можете добавить ещё {15 - previews.length} изображений",
+	"size_info": "Вы можете добавить ещё ",
+	"size_info2": " изображений",
 	"size_finshed": "Добавлено достаточно изображений",
 	"hours": "Часы",
 	"minutes": "Минуты",
