some translates updated

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -70,20 +70,18 @@
 	"all": "Все",
 	"image_upload": "Загрузка изображения",
 	"main_info": "Основная информация",
-	"cottage_nema": "Название дачи",
 	"count_of_guests": "Количество гостей",
 	"count_rooms": "Количество комнат",
-	"single_bad": "Односпальные кровати",
-	"double_bad": "Двуспальные кровати",
+	"single_bed": "Односпальные кровати",
+	"double_bed": "Двуспальные кровати",
 	"contact_phone": "Контактный телефон",
 	"desk_cottage": "Краткое описание дачи",
 	"location": "Местоположение",
 	"select_region": "Выберите область",
 	"select_place": "Выберите место",
 	"choos_map": "Выбрать на карте",
-	"price": "Цены",
+	"prices": "Цены",
 	"once_price": "Цена за день",
-	"weekent_price": "Цена на выходные",
 	"date": "Дата",
 	"rule": "Правила",
 	"comforts": "Удобства",
@@ -104,5 +102,31 @@
 	"yes": "Да",
 	"no": "Нет",
 	"work_day_price": "Цена рабочего дня",
-	"resently_cottage": "Недавно размещенные объявления"
+	"resently_cottage": "Недавно размещенные объявления",
+
+
+	"ads_located_in": "Объявления, размещённые в",
+	"about_cottage": "О даче",
+	"contact_cottage_owner": "Связаться с владельцем дачи",
+	"cottage_info": "Информация",
+	"cottage_name": "Название дачи",
+	"check_in_time": "Время заезда",
+	"check_out_time": "Время выезда",
+	"weekend_days": "Выходные дни",
+	"price": "Цена",
+	"call_now": "Позвонить сейчас",
+	"guests": "Гости",
+	"bedrooms": "Спальные комнаты",
+	"beds": "Кровати",
+	"double_beds": "Двуспальные кровати",
+	"guest_reviews": "Отзывы гостей",
+	"recreation_places": "Места отдыха",
+	"top_ads": "Топ объявления",
+	"reviews": "Отзывы",
+	"view_all_images": "Посмотреть все изображения",
+	"my_cottages": "Мои дачи",
+	"get_my_location": "Получить мое местоположение",
+	"search_by_location_name": "Поиск по названию локации"
+
+	
 }
