translates are updated and fixed

--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,132 +1,157 @@
 {
-	"nav_logo": "DachaOL",
+  "nav_logo": "DachaOL",
 
-	"contact_to_me": "Связаться с нами",
-	"dachaOl_info": "Свяжитесь с DachaOL",
-	"send_message": "Отправить",
-	"contacy_description": "Я здесь, чтобы помочь вам и ответить на любые вопросы. Жду вашего сообщения.",
-	"form_message": "Напишите, если у вас есть вопросы...",
-	"form_number": "Номер телефона",
-	"form_name": "Введите ваше имя",
+  "contact_to_me": "Связаться с нами",
+  "dachaOl_info": "Свяжитесь с DachaOL",
+  "send_message": "Отправить",
+  "contacy_description": "Я здесь, чтобы помочь вам и ответить на любые вопросы. Жду вашего сообщения.",
+  "form_message": "Напишите, если у вас есть вопросы...",
+  
+  "form_name": "Введите ваше имя",
 
-	"search_no_result": "К сожалению, ничего не найдено 😔",
-	"faq_title": "Часто Задаваемые Вопросы",
-	"faq_visibility_question": "Сколько раз показывается на баннере?",
-	"faq_visibility_answer": "Ваша дача будет видна каждому пользователю при входе на сайт",
-	"faq_refund_question": "Можно ли вернуть оплату?",
-	"faq_refund_answer": "Нет, оплата не возвращается, но вы можете пользоваться услугой до окончания срока",
-	"faq_multiple_question": "Показываются ли одновременно с другими дачами?",
-	"faq_multiple_answer": "Да, но каждая дача отображается по отдельному тарифу",
-	"target_title": "Кому Подойдет Эта Услуга?",
-	"target_quick_rental": "Тем, кто хочет быстро сдать в аренду",
-	"target_seasonal_demand": "В периоды высокого сезонного спроса",
-	"target_new_owners": "Новым владельцам дач",
-	"promo_title": "Отличное Предложение!",
-	"promo_description": "5 дней бесплатно при покупке тарифа на 1 месяц!",
-	"cta_button": "Выбрать Тариф Сейчас!",
+  "search_no_result": "К сожалению, ничего не найдено 😔",
+  "faq_title": "Часто Задаваемые Вопросы",
+  "faq_visibility_question": "Сколько раз показывается на баннере?",
+  "faq_visibility_answer": "Ваша дача будет видна каждому пользователю при входе на сайт",
+  "faq_refund_question": "Можно ли вернуть оплату?",
+  "faq_refund_answer": "Нет, оплата не возвращается, но вы можете пользоваться услугой до окончания срока",
+  "faq_multiple_question": "Показываются ли одновременно с другими дачами?",
+  "faq_multiple_answer": "Да, но каждая дача отображается по отдельному тарифу",
+  "target_title": "Кому Подойдет Эта Услуга?",
+  "target_quick_rental": "Тем, кто хочет быстро сдать в аренду",
+  "target_seasonal_demand": "В периоды высокого сезонного спроса",
+  "target_new_owners": "Новым владельцам дач",
+  "promo_title": "Отличное Предложение!",
+  "promo_description": "5 дней бесплатно при покупке тарифа на 1 месяц!",
+  "cta_button": "Выбрать Тариф Сейчас!",
 
-	"announcements": "Объявления",
-	"announcement": "Объявление",
-	"services": "Услуги",
-	"contact": "Контакты",
-	"add_announcements": "Разместить объявление",
-	"home": "Главная",
-	"fovarite": "Избранное",
-	"profile": "Профиль",
-	"oxshash_elonlar": "Похожие объявления",
-	"currency": "сум",
-	"success": "Успешно",
-	"select_button": "Выбрать",
-	"map_plase": "Добавить на карту",
-	"my_location": "Моё местоположение",
-	"rejected": "Отклонено",
-	"tariffs": "Тарифы",
-	"progress": "В процессе",
-	"filtr": "Фильтр",
-	"serach_filtr": "Поиск по названию...",
-	"logout": "Выйти",
-	"my_annonim": "Вы ещё не добавили объявлений!",
-	"place": "Местоположение",
-	"camforts": "Удобства",
-	"add_cottage": "Ваше объявление появится на сайте после прохождения модерации",
-	"possible": "Возможно",
-	"inPossible": "Невозможно",
-	"clock": "часы",
-	"from": "с",
-	"to": "до",
-	"enter": "Вход",
-	"pats": "Домашние животные",
-	"alcahol": "Алкогольные напитки",
-	"party": "Корпоративное мероприятие",
-	"vois": "Тихие часы",
-	"my_announcements": "Мои объявления",
-	"my_tariff": "Мои тарифы",
-	"settings": "Настройки",
-	"save": "Сохранить",
-	"none_fovatite_cottage": "У вас пока нет избранных объявлений!",
-	"add": "Добавить",
-	"all_announcements": "Все объявления",
-	"more": "Подробнее",
-	"all": "Все",
-	"image_upload": "Загрузка изображения",
-	"main_info": "Основная информация",
-	"count_of_guests": "Количество гостей",
-	"count_rooms": "Количество комнат",
-	"single_bed": "Односпальные кровати",
-	"double_bed": "Двуспальные кровати",
-	"contact_phone": "Контактный телефон",
-	"desk_cottage": "Краткое описание дачи",
-	"location": "Местоположение",
-	"select_region": "Выберите область",
-	"select_place": "Выберите место",
-	"choos_map": "Выбрать на карте",
-	"prices": "Цены",
-	"once_price": "Цена за день",
-	"date": "Дата",
-	"rule": "Правила",
-	"comforts": "Удобства",
-	"noSmoking": "Разрешено курить",
-	"noAlcohol": "Разрешён алкоголь",
-	"noPets": "Разрешены животные",
-	"familyOnly": "Только для семейных",
-	"noLoudMusic": "Разрешена громкая музыка",
-	"noParty": "Разрешены вечеринки",
-	"image_size": "PNG, JPG или GIF (макс: 5MB)",
-	"size_worning": "Количество изображений должно быть не менее 3 (макс: 15).",
-	"size_requerd": "Добавьте изображение (должно быть как минимум 3 изображения)",
-	"size_info": "Вы можете добавить ещё ",
-	"size_info2": " изображений",
-	"size_finshed": "Добавлено достаточно изображений",
-	"hours": "Часы",
-	"minutes": "Минуты",
-	"yes": "Да",
-	"no": "Нет",
-	"work_day_price": "Цена рабочего дня",
-	"resently_cottage": "Недавно размещенные объявления",
+  "announcements": "Объявления",
+  "announcement": "Объявление",
+  "services": "Услуги",
+  "contact": "Контакты",
+  "add_announcements": "Разместить объявление",
+  "home": "Главная",
+  "fovarite": "Избранное",
+  "profile": "Профиль",
+  "oxshash_elonlar": "Похожие объявления",
+  "currency": "сум",
+  "success": "Успешно",
+  "select_button": "Выбрать",
+  "map_plase": "Добавить на карту",
+  "my_location": "Моё местоположение",
+  "rejected": "Отклонено",
+  "tariffs": "Тарифы",
+  "progress": "В процессе",
+  "filtr": "Фильтр",
+  "serach_filtr": "Поиск по названию...",
+  "logout": "Выйти",
+  "my_annonim": "Вы ещё не добавили объявлений!",
+  "place": "Местоположение",
+  "camforts": "Удобства",
+  "add_cottage": "Ваше объявление появится на сайте после прохождения модерации",
+  "possible": "Возможно",
+  "inPossible": "Невозможно",
+  "clock": "часы",
+  "from": "с",
+  "to": "до",
+  "enter": "Вход",
+  "pats": "Домашние животные",
+  "alcahol": "Алкогольные напитки",
+  "party": "Корпоративное мероприятие",
+  "vois": "Тихие часы",
+  "my_announcements": "Мои объявления",
+  "my_tariff": "Мои тарифы",
+  "settings": "Настройки",
+  "save": "Сохранить",
+  "none_fovatite_cottage": "У вас пока нет избранных объявлений!",
+  "add": "Добавить",
+  "all_announcements": "Все объявления",
+  "more": "Подробнее",
+  "all": "Все",
+  "image_upload": "Загрузка изображения",
+  "main_info": "Основная информация",
+  "count_of_guests": "Количество гостей",
+  "count_rooms": "Количество комнат",
+  "single_bed": "Односпальные кровати",
+  "double_bed": "Двуспальные кровати",
+  "contact_phone": "Контактный телефон",
+  "desk_cottage": "Краткое описание дачи",
+  "location": "Местоположение",
+  "select_region": "Выберите область",
+  "select_place": "Выберите место",
+  "choos_map": "Выбрать на карте",
+  "prices": "Цены",
+  "once_price": "Цена за день",
+  "date": "Дата",
+  "rule": "Правила",
+  "comforts": "Удобства",
+  "noSmoking": "Разрешено курить",
+  "noAlcohol": "Разрешён алкоголь",
+  "noPets": "Разрешены животные",
+  "familyOnly": "Только для семейных",
+  "noLoudMusic": "Разрешена громкая музыка",
+  "noParty": "Разрешены вечеринки",
+  "image_size": "PNG, JPG или GIF (макс: 5MB)",
+  "size_worning": "Количество изображений должно быть не менее 3 (макс: 15).",
+  "size_requerd": "Добавьте изображение (должно быть как минимум 3 изображения)",
+  "size_info": "Вы можете добавить ещё ",
+  "size_info2": " изображений",
+  "size_finshed": "Добавлено достаточно изображений",
+  "hours": "Часы",
+  "minutes": "Минуты",
+  "yes": "Да",
+  "no": "Нет",
+  "work_day_price": "Цена рабочего дня",
+  "resently_cottage": "Недавно размещенные объявления",
 
+  "ads_located_in": "Объявления, размещённые в",
+  "about_cottage": "О даче",
+  "contact_cottage_owner": "Связаться с владельцем дачи",
+  "cottage_info": "Информация",
+  "cottage_name": "Название дачи",
+  "check_in_time": "Время заезда",
+  "check_out_time": "Время выезда",
+  "weekend_days": "Выходные дни",
+  "price": "Цена",
+  "call_now": "Позвонить сейчас",
+  "guests": "Гости",
+  "bedrooms": "Спальные комнаты",
+  "beds": "Кровати",
+  "double_beds": "Двуспальные кровати",
+  "guest_reviews": "Отзывы гостей",
+  "recreation_places": "Места отдыха",
+  "top_ads": "Топ объявления",
+  "reviews": "Отзывы",
+  "view_all_images": "Посмотреть все изображения",
+  "my_cottages": "Мои дачи",
+  "get_my_location": "Получить мое местоположение",
+  "search_by_location_name": "Поиск по названию локации",
 
-	"ads_located_in": "Объявления, размещённые в",
-	"about_cottage": "О даче",
-	"contact_cottage_owner": "Связаться с владельцем дачи",
-	"cottage_info": "Информация",
-	"cottage_name": "Название дачи",
-	"check_in_time": "Время заезда",
-	"check_out_time": "Время выезда",
-	"weekend_days": "Выходные дни",
-	"price": "Цена",
-	"call_now": "Позвонить сейчас",
-	"guests": "Гости",
-	"bedrooms": "Спальные комнаты",
-	"beds": "Кровати",
-	"double_beds": "Двуспальные кровати",
-	"guest_reviews": "Отзывы гостей",
-	"recreation_places": "Места отдыха",
-	"top_ads": "Топ объявления",
-	"reviews": "Отзывы",
-	"view_all_images": "Посмотреть все изображения",
-	"my_cottages": "Мои дачи",
-	"get_my_location": "Получить мое местоположение",
-	"search_by_location_name": "Поиск по названию локации"
+  "edit": "Редактировать",
+  "guest_capacity": "человек",
+  "room_count": "комнатная",
+  "main_image": "Основное изображение",
+  "replace_image": "Заменить изображение",
+  "additional_images": "Дополнительные изображения",
+  "add_image": "Добавить изображение",
+  "number_of_guests": "Количество гостей",
+  "current_number": "Текущий номер:",
+  "change_number": "Изменить номер",
+  "cottage_description_short": "Краткое описание дачи",
 
-	
+  "activate_tariff": "Активировать",
+  "select_tariff_params": "Выберите параметры и срок тарифа",
+  "select_your_ad": "Выберите своё объявление",
+  "choose_ad": "Выбрать объявление",
+  "cancel": "Отмена",
+  "activate": "Активировать",
+  "activating": "Активация",
+  "skip": "Пропустить",
+  "resend": "Отправить повторно",
+  "confirm": "Подтвердить",
+  "get_code": "Получить код",
+  "successfully_added": "Успешно добавлено",
+  "image_uploaded": "Изображение успешно загружено",
+  "image_deleted": "Изображение успешно удалено",
+  "accept_all_terms": "Я принимаю все условия"
 }
