--- a/public/locales/uz.json
+++ b/public/locales/uz.json
@@ -1,153 +1,159 @@
 {
-  "nav_logo": "DachaOL",
+	"nav_logo": "DachaOL",
 
-  "contact_to_me": "Biz bilan bog`lanish",
-  "dachaOl_info": "DachaOL bilan bog`laning",
-  "send_message": "Yuborish",
-  "contacy_description": "Men sizga yordam berish va har qanday savolga javob berish uchun shu yerdaman. Sizdan xabar kutib qolaman",
-  "form_message": "Savollarngiz bo`lsa yozing...",
-  "form_name": "Ismingizni kiriting",
+	"contact_to_me": "Biz bilan bog`lanish",
+	"dachaOl_info": "DachaOL bilan bog`laning",
+	"send_message": "Yuborish",
+	"contacy_description": "Men sizga yordam berish va har qanday savolga javob berish uchun shu yerdaman. Sizdan xabar kutib qolaman",
+	"form_message": "Savollarngiz bo`lsa yozing...",
+	"form_name": "Ismingizni kiriting",
 
-  "faq_title": "Tez-tez Beriladigan Savollar",
-  "faq_visibility_question": "Bannerda necha marta ko'rinadi?",
-  "faq_visibility_answer": "Dachangiz har bir foydalanuvchi saytga kirganida ko'rinadi",
-  "faq_refund_question": "To'lovni qaytarib olsam bo'ladimi?",
-  "faq_refund_answer": "Yo'q, to'lov qaytarilmaydi, lekin tanlangan muddat tugaguncha foydalanishingiz mumkin",
-  "faq_multiple_question": "Boshqa dachalar bilan bir vaqtda chiqadimi?",
-  "faq_multiple_answer": "Ha, lekin har bir dacha alohida tarif asosida ko'rsatiladi",
-  "target_title": "Bu Xizmat Kimlar Uchun?",
-  "target_quick_rental": "Tez ijara qilmoqchi bo'lganlar",
-  "target_seasonal_demand": "Mavsumiy talab yuqori bo'lgan paytda",
-  "target_new_owners": "Yangi dacha egasi",
-  "promo_title": "Ajoyib Taklif!",
-  "promo_description": "1 Oylik tarifni sotib olganlarga 5 kun bepul!",
-  "cta_button": "Hoziroq Tarifni Tanlang!",
-  "announcements": "E'lonlar",
-  "announcement": "E'lon",
-  "services": "Xizmatlar",
-  "contact": "Bog`lanish",
-  "add_announcements": "E'lon joylash",
-  "home": "Bosh sahifa",
-  "fovarite": "Sevimlilar",
-  "profile": "Profil",
-  "oxshash_elonlar": "O'xshash e'lonlar",
-  "currency": "so'm",
-  "success": "Muvaffaqiyat",
-  "select_button": "Tanlash",
-  "map_plase": "Xarita qo`shish",
-  "my_location": "Mening joylashuvim",
-  "rejected": "Rad etilgan",
-  "tariffs": "Tariflar",
-  "progress": "Jarayonda",
-  "filtr": "Filtr",
-  "serach_filtr": "Nomi boyicha qirirish...",
-  "logout": "Chiqish",
-  "my_annonim": "Hozircha e'lon qo'shmagansiz!",
-  "place": "Joylashuv",
-  "add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi",
-  "possible": "Mumkin",
-  "inPossible": "Mumkin emas",
-  "clock": "soat",
-  "from": "gacha",
-  "to": "dan",
-  "enter": "Kirish",
-  "pats": "Uy hayvonlari",
-  "alcahol": "Spirtli ichimliklar",
-  "party": "Korporativ tadbir",
-  "vois": "Sokin soatlar",
-  "my_announcements": "Mening e'lonlarim",
-  "my_tariff": "Foydalangan tariflarim",
-  "settings": "Sozlamalar",
-  "save": "Saqlash",
-  "none_fovatite_cottage": "Hozida sizda sevimle e'lonlar mavjud emas!",
-  "add": "Qo'shish",
-  "all_announcements": "Barcha e'lonlar",
-  "more": "Batafsil",
-  "all": "Barcha",
-  "image_upload": "Rasm yuklash",
-  "main_info": "Asosiy ma`lumotlar",
-  "count_of_guests": "Mexmonlar soni",
-  "count_rooms": "Xonalar soni",
-  "single_bed": "1 o'rinli yotoqlar soni",
-  "double_bed": "2 o'rinli yotoqlar soni",
-  "contact_phone": "Telefon raqam",
-  "desk_cottage": "Dacha haqida qisqacha tavsif",
-  "location": "Manzil",
-  "select_region": "Viloyatni tanlang",
-  "select_place": "Joylashuvni tanlang",
-  "choos_map": "Xaritadan belgilash",
-  "prices": "Narxlar",
-  "once_price": "Bir kunlik narx",
-  "date": "Vaqt",
-  "rule": "Qoidalar",
-  "comforts": "Qulayliklar",
-  "noSmoking": "Chekishga ruxsat",
-  "noAlcohol": "Alkogol ichimlikariga ruxsat",
-  "noPets": "Uy hayvonlariga ruxsat",
-  "familyOnly": "Faqat Oilaliylar uchun",
-  "noLoudMusic": "Baland musiqaga ruhsat",
-  "noParty": "Bazm qilishga ruhsat",
-  "image_size": "PNG, JPG yoki GIF (max: 5MB)",
-  "size_worning": "Rasmlar soni 3ta dan kam bo`lmasligi kerak(max: 15 ta).",
-  "size_requerd": "Rasm qo`shing (kamida 3 ta rasm bo`lishi kerak)",
-  "size_info": "Yana ",
-  "size_info2": " ta rasm qo`shishingiz mumkin",
-  "size_finshed": "Yetarlicha rasm qo`shildi",
-  "hours": "Soat",
-  "minutes": "Minut",
-  "yes": "Ha",
-  "no": "Yoq",
-  "work_day_price": "Ish kunlaridagi narx",
-  "resently_cottage": "Yaqinda joylangan e`lonlar ",
+	"faq_title": "Tez-tez Beriladigan Savollar",
+	"faq_visibility_question": "Bannerda necha marta ko'rinadi?",
+	"faq_visibility_answer": "Dachangiz har bir foydalanuvchi saytga kirganida ko'rinadi",
+	"faq_refund_question": "To'lovni qaytarib olsam bo'ladimi?",
+	"faq_refund_answer": "Yo'q, to'lov qaytarilmaydi, lekin tanlangan muddat tugaguncha foydalanishingiz mumkin",
+	"faq_multiple_question": "Boshqa dachalar bilan bir vaqtda chiqadimi?",
+	"faq_multiple_answer": "Ha, lekin har bir dacha alohida tarif asosida ko'rsatiladi",
+	"target_title": "Bu Xizmat Kimlar Uchun?",
+	"target_quick_rental": "Tez ijara qilmoqchi bo'lganlar",
+	"target_seasonal_demand": "Mavsumiy talab yuqori bo'lgan paytda",
+	"target_new_owners": "Yangi dacha egasi",
+	"promo_title": "Ajoyib Taklif!",
+	"promo_description": "1 Oylik tarifni sotib olganlarga 5 kun bepul!",
+	"cta_button": "Hoziroq Tarifni Tanlang!",
+	"announcements": "E'lonlar",
+	"announcement": "E'lon",
+	"services": "Xizmatlar",
+	"contact": "Bog`lanish",
+	"add_announcements": "E'lon joylash",
+	"home": "Bosh sahifa",
+	"fovarite": "Sevimlilar",
+	"profile": "Profil",
+	"oxshash_elonlar": "O'xshash e'lonlar",
+	"currency": "so'm",
+	"success": "Muvaffaqiyat",
+	"select_button": "Tanlash",
+	"map_plase": "Xarita qo`shish",
+	"my_location": "Mening joylashuvim",
+	"rejected": "Rad etilgan",
+	"tariffs": "Tariflar",
+	"progress": "Jarayonda",
+	"filtr": "Filtr",
+	"serach_filtr": "Nomi boyicha qirirish...",
+	"logout": "Chiqish",
+	"my_annonim": "Hozircha e'lon qo'shmagansiz!",
+	"place": "Joylashuv",
+	"add_cottage": "Eloningiz moderatsiyadan o‘tganidan keyin saytimizda ko‘rinadi",
+	"possible": "Mumkin",
+	"inPossible": "Mumkin emas",
+	"clock": "soat",
+	"from": "gacha",
+	"to": "dan",
+	"enter": "Kirish",
+	"pats": "Uy hayvonlari",
+	"alcahol": "Spirtli ichimliklar",
+	"party": "Korporativ tadbir",
+	"vois": "Sokin soatlar",
+	"my_announcements": "Mening e'lonlarim",
+	"my_tariff": "Foydalangan tariflarim",
+	"settings": "Sozlamalar",
+	"save": "Saqlash",
+	"none_fovatite_cottage": "Hozida sizda sevimle e'lonlar mavjud emas!",
+	"add": "Qo'shish",
+	"all_announcements": "Barcha e'lonlar",
+	"more": "Batafsil",
+	"all": "Barcha",
+	"image_upload": "Rasm yuklash",
+	"main_info": "Asosiy ma`lumotlar",
+	"count_of_guests": "Mexmonlar soni",
+	"count_rooms": "Xonalar soni",
+	"single_bed": "1 o'rinli yotoqlar soni",
+	"double_bed": "2 o'rinli yotoqlar soni",
+	"contact_phone": "Telefon raqam",
+	"desk_cottage": "Dacha haqida qisqacha tavsif",
+	"location": "Manzil",
+	"select_region": "Viloyatni tanlang",
+	"select_place": "Joylashuvni tanlang",
+	"choos_map": "Xaritadan belgilash",
+	"prices": "Narxlar",
+	"once_price": "Bir kunlik narx",
+	"date": "Vaqt",
+	"rule": "Qoidalar",
+	"comforts": "Qulayliklar",
+	"noSmoking": "Chekishga ruxsat",
+	"noAlcohol": "Alkogol ichimlikariga ruxsat",
+	"noPets": "Uy hayvonlariga ruxsat",
+	"familyOnly": "Faqat Oilaliylar uchun",
+	"noLoudMusic": "Baland musiqaga ruhsat",
+	"noParty": "Bazm qilishga ruhsat",
+	"image_size": "PNG, JPG yoki GIF (max: 5MB)",
+	"size_worning": "Rasmlar soni 3ta dan kam bo`lmasligi kerak(max: 15 ta).",
+	"size_requerd": "Rasm qo`shing (kamida 3 ta rasm bo`lishi kerak)",
+	"size_info": "Yana ",
+	"size_info2": " ta rasm qo`shishingiz mumkin",
+	"size_finshed": "Yetarlicha rasm qo`shildi",
+	"hours": "Soat",
+	"minutes": "Minut",
+	"yes": "Ha",
+	"no": "Yoq",
+	"work_day_price": "Ish kunlaridagi narx",
+	"resently_cottage": "Yaqinda joylangan e`lonlar ",
 
-  "ads_located_in": "da joylashgan e`lonlar",
-  "about_cottage": "Dacha haqida",
-  "contact_cottage_owner": "Dacha egasi bilan bog`lanish",
-  "cottage_info": "Ma`lumotlar",
-  "cottage_name": "Dacha nomi",
-  "check_in_time": "Kirish vaqti",
-  "check_out_time": "Chiqish vaqti",
-  "weekend_days": "Dam olish kunlari",
-  "price": "Narxi",
-  "call_now": "Qo`ng`iroq qilish",
-  "guests": "Mehmonlar",
-  "bedrooms": "Yotoq xonalar",
-  "beds": "Yotoqlar",
-  "guest_reviews": "Mehmonlar sharhlari",
-  "recreation_places": "Dam olish maskanlari",
-  "top_ads": "Top E`lonlar",
-  "reviews": "Sharhlar",
-  "view_all_images": "Barcha rasmlarni ko`rish",
-  "my_cottages": "Mening dachalarim",
-  "get_my_location": "Joylashuvimni olish",
-  "search_by_location_name": "Joylashuv nomi bo'yicha qidirish",
+	"ads_located_in": "da joylashgan e`lonlar",
+	"about_cottage": "Dacha haqida",
+	"contact_cottage_owner": "Dacha egasi bilan bog`lanish",
+	"cottage_info": "Ma`lumotlar",
+	"cottage_name": "Dacha nomi",
+	"check_in_time": "Kirish vaqti",
+	"check_out_time": "Chiqish vaqti",
+	"weekend_days": "Dam olish kunlari",
+	"price": "Narxi",
+	"call_now": "Qo`ng`iroq qilish",
+	"guests": "Mehmonlar",
+	"bedrooms": "Yotoq xonalar",
+	"beds": "Yotoqlar",
+	"guest_reviews": "Mehmonlar sharhlari",
+	"recreation_places": "Dam olish maskanlari",
+	"top_ads": "Top E`lonlar",
+	"reviews": "Sharhlar",
+	"view_all_images": "Barcha rasmlarni ko`rish",
+	"my_cottages": "Mening dachalarim",
+	"get_my_location": "Joylashuvimni olish",
+	"search_by_location_name": "Joylashuv nomi bo'yicha qidirish",
 
-  "edit": "Tahrirlash",
-  "guest_capacity": "kishilik",
-  "room_count": "xonalik",
-  "main_image": "Asosiy rasm",
-  "replace_image": "Rasmni almashtirish",
-  "additional_images": "Qo`shimcha rasmlar",
-  "add_image": "Rasm qo`shish",
-  "number_of_guests": "Mehmonlar soni",
-  "current_number": "Hozirgi raqam",
-  "change_number": "Raqamni almashtirish",
-  "cottage_description_short": "Dacha haqida qisqacha tavsif",
+	"edit": "Tahrirlash",
+	"guest_capacity": "kishilik",
+	"room_count": "xonalik",
+	"main_image": "Asosiy rasm",
+	"replace_image": "Rasmni almashtirish",
+	"additional_images": "Qo`shimcha rasmlar",
+	"add_image": "Rasm qo`shish",
+	"number_of_guests": "Mehmonlar soni",
+	"current_number": "Hozirgi raqam",
+	"change_number": "Raqamni almashtirish",
+	"cottage_description_short": "Dacha haqida qisqacha tavsif",
 
-  "activate_tariff": " tarifini faollashtirish",
-  "select_tariff_params": "Tarif parametrlari va muddatni tanlang",
-  "select_your_ad": "E`loningizni tanlang",
-  "choose_ad": "E`lon tanlang",
-  "cancel": "Bekor qilish",
-  "activate": "Faollashtirish",
-  "activating": "Faollashtirilmoqda",
+	"activate_tariff": " tarifini faollashtirish",
+	"select_tariff_params": "Tarif parametrlari va muddatni tanlang",
+	"select_your_ad": "E`loningizni tanlang",
+	"choose_ad": "E`lon tanlang",
+	"cancel": "Bekor qilish",
+	"activate": "Faollashtirish",
+	"activating": "Faollashtirilmoqda",
 
-  "skip": "O`tkazib yuborish",
-  "resend": "Qayta yuborish",
-  "confirm": "Tasdiqlash",
-  "get_code": "Kodni olish",
-  "successfully_added": "Muvaffaqiyatli qo`shildi",
-  "image_uploaded": "Rasm muvaffaqiyatli yuklandi",
-  "image_deleted": "Rasm muvaffaqiyatli o`chirildi",
-  "accept_all_terms": "Barcha shartlarga roziman"
+	"skip": "O`tkazib yuborish",
+	"resend": "Qayta yuborish",
+	"confirm": "Tasdiqlash",
+	"get_code": "Kodni olish",
+	"successfully_added": "Muvaffaqiyatli qo`shildi",
+	"image_uploaded": "Rasm muvaffaqiyatli yuklandi",
+	"image_deleted": "Rasm muvaffaqiyatli o`chirildi",
+	"accept_all_terms": "Barcha shartlarga roziman",
+
+	"add_comment": "Sharh yozing...",
+	"submit_comment": "Sharhni yuborish",
+	"no_comment": "Hozircha sharhlar mavjud emas!",
+	"rating_": "E'lonni baholang",
+  "rating_test":"Sizning fikringiz biz uchun muhim"
 }
